--- a/styling/userprofile.css
+++ b/styling/userprofile.css
@@ -5,110 +5,109 @@
     -webkit-box-shadow: 0 10px 5px #888888;
     -moz-box-shadow: 0 10px 5px #888888;
     box-shadow: 0 10px 5px #888888;
-}
-
-.profile-img {
+  }
+  
+  .profile-img {
     border-radius: 50%;
     width: 200px;
     height: 200px;
-}
-
-.container2-section1 {
+  }
+  
+  .container2-section1 {
     display: grid;
     justify-content: center;
-}
-
-.container3-section1 {
+  }
+  
+  .container3-section1 {
     display: grid;
     grid-template-columns: repeat(3, 250px);
     margin: 50px;
-}
-
-
-.Logout {
+  }
+  
+  .Logout {
     width: 100px;
     height: 50px;
     margin-left: 470px;
-    background-color: #E55604;
-    border: 1px solid #E55604;
+    background-color: #e55604;
+    border: 1px solid #e55604;
     border-radius: 10px;
     transition: 1s ease;
-    margin: 56px auto;
+    margin: 40px auto;
     margin-left: 450px;
-}
-
-.Logout:hover {
+  }
+  
+  .Logout:hover {
     background-color: white;
-}
-
-
-.icon {
+  }
+  
+  .icon {
     grid-column: 2;
     width: 30px;
     margin-top: 37px;
-}
-
-.icon2 {
+  }
+  
+  .icon2 {
     display: none;
-}
-
-.bte5 {
+  }
+  
+  .bte5 {
     margin-top: -35px;
-}
-
-.labelforimg {
+  }
+  
+  .labelforimg {
     display: block;
     width: 130px;
     padding: 12px;
     margin: 20px auto;
-    background-color: #E55604;
+    background-color: #e55604;
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
     margin-right: 88px;
-}
-
-.container-section2 {
-    border-top: 2px solid #E55604;
+  }
+  
+  .container-section2 {
+    border-top: 2px solid #e55604;
     background-color: white;
     -webkit-box-shadow: 0 10px 5px #888888;
     -moz-box-shadow: 0 10px 5px #888888;
     box-shadow: 0 10px 5px #888888;
     border-radius: 20px;
-    width: 60%;
     min-height: 404px;
     margin: 50px auto;
-}
-
-.container-section2 a {
+    width: 60%;
+  }
+  
+  .container-section2 a {
     color: white;
     margin-left: 30px;
     text-decoration: none;
     color: white;
-}
-
-.orange-rectangular {
-    background-color: #E55604;
+  }
+  
+  .orange-rectangular {
+    background-color: #e55604;
     width: 100%;
     height: 50px;
     border-radius: 16px;
     padding-top: 10px;
-}
-
-.orange-rectangular a {
+  }
+  
+  .orange-rectangular a {
     color: white;
     margin-left: 30px;
     text-decoration: none;
     position: relative;
-}
-
-.orange-rectangular a:hover,
-.orange-rectangular a.active {
+  }
+  
+  .orange-rectangular a:hover,
+  .orange-rectangular a.active:hover {
     color: black;
-
-}
-
-.orange-rectangular a:after {
+  }
+  .orange-rectangular a.active {
+    color: white;
+  }
+  .orange-rectangular a:after {
     content: "";
     position: absolute;
     background-color: white;
@@ -117,240 +116,226 @@
     left: 0;
     bottom: -5px;
     transition: width 0.3s ease;
-}
-
-.orange-rectangular a:hover:after {
+  }
+  
+  .orange-rectangular a:hover:after {
     width: 100%;
-}
-
-
-.edit_information {
+  }
+  
+  .edit_information {
     margin: auto;
     margin-top: 56px;
-
-}
-
-.profile_details_text {
+  }
+  
+  .profile_details_text {
     margin-bottom: 5px;
-}
-
-.form-group {
+  }
+  
+  .form-group {
     margin-bottom: 30px;
-}
-
-.submit {
+  }
+  
+  .submit {
     width: 100px;
     margin-left: 40%;
-    background-color: #E55604;
-    border: 1px solid #E55604;
+    background-color: #e55604;
+    border: 1px solid #e55604;
     border-radius: 10px;
     transition: 1s ease;
     height: 45px;
-}
-
-.submit:hover {
+  }
+  
+  .submit:hover {
     background-color: white;
-}
-
-.button {
+  }
+  
+  .button {
     width: 100px;
     height: 25px;
     margin-left: 245px;
-    background-color: #E55604;
-    border: 1px solid #E55604;
+    background-color: #e55604;
+    border: 1px solid #e55604;
     border-radius: 10px;
     transition: 1s ease;
-}
-
-.button:hover {
+  }
+  
+  .button:hover {
     background-color: white;
-}
-
-
-@media only screen and (max-width: 767px) {
-
+  }
+  
+  @media only screen and (max-width: 767px) {
     .container-section1 {
-        height: auto;
+      height: auto;
     }
-
+  
     .profile-img {
-        width: 200px;
-        height: 200px;
+      width: 200px;
+      height: 200px;
     }
-
+  
     .container3-section1 {
-        grid-template-columns: repeat(1, 100%);
-        gap: 20px;
+      grid-template-columns: repeat(1, 100%);
+      gap: 20px;
     }
-
-
-
+  
     .cont-icon2 {
-        margin-left: 180px;
-        margin-bottom: 10px;
-
+      margin-left: 180px;
+      margin-bottom: 10px;
     }
-
-
-
+  
     .labelforimg {
-        display: block;
-        width: 130px;
-        padding: 12px;
-        margin: 50px auto;
-        background-color: #E55604;
-        color: #fff;
-        border-radius: 5px;
-        cursor: pointer;
-
+      display: block;
+      width: 130px;
+      padding: 12px;
+      margin: 50px auto;
+      background-color: #e55604;
+      color: #fff;
+      border-radius: 5px;
+      cursor: pointer;
     }
-
+  
     .cont-logout {
-        padding: 40px;
+      padding: 40px;
     }
-
+  
     .Logout {
-        margin: 0px;
+      margin: 0px;
     }
-
+  
     .container-section2 {
-        width: 80%;
+      width: 80%;
     }
-
+  
     .submit {
-        margin-left: 0;
+      margin-left: 0;
     }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 1000px) {
+  }
+  
+  @media only screen and (min-width: 768px) and (max-width: 1000px) {
     .container-section2 {
-        width: 80%;
+      width: 80%;
     }
-
+  
     .submit {
-        margin-left: 0;
+      margin-left: 0;
     }
-
+  
     .Logout {
-        margin-left: 300px;
+      margin-left: 300px;
     }
-}
-
-
-
-/* ---------------------------------------footer css ------------------------------ */
-a {
+  }
+  
+  /* ---------------------------------------footer css ------------------------------ */
+  a {
     color: inherit;
-}
-
-.footercontain1 {
+  }
+  
+  .footercontain1 {
     max-width: 1400px;
     padding: 0 20px;
     margin: 0 auto;
-}
-
-.site-wrapper1 {
+  }
+  
+  .site-wrapper1 {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-}
-
-.site-header1 {
+  }
+  
+  .site-header1 {
     padding: 3vh 0;
     text-align: center;
     background: #e55604;
-}
-
-.site-header1>div {
+  }
+  
+  .site-header1 > div {
     display: flex;
     justify-content: center;
-}
-
-.site-header1 a {
+  }
+  
+  .site-header1 a {
     line-height: 1;
-}
-
-.site-main1 {
+  }
+  
+  .site-main1 {
     display: flex;
     align-items: center;
     flex-grow: 1;
     text-align: center;
     margin: 30px 0;
-}
-
-.site-main1 h1 {
+  }
+  
+  .site-main1 h1 {
     line-height: 1.2;
     margin: 0 0 20px;
-}
-
-.site-footer1 {
+  }
+  
+  .site-footer1 {
     padding: 30px 0;
     color: white;
     background: #191717;
     margin: 80px 0 0;
-}
-
-.site-footer1 .logo-wrapper1 div {
+  }
+  
+  .site-footer1 .logo-wrapper1 div {
     font-style: italic;
     font-size: 15px;
     line-height: 1;
-}
-
-.site-footer1 .widgets-wrapper1 {
+  }
+  
+  .site-footer1 .widgets-wrapper1 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     border-block: 1px solid rgba(255, 255, 255, 0.2);
     margin-top: 20px;
-}
-
-.site-footer1 h5 {
+  }
+  
+  .site-footer1 h5 {
     font-size: 20px;
     margin: 20px 0;
-}
-
-.site-footer1 ul {
+  }
+  
+  .site-footer1 ul {
     list-style: none;
     padding: 0;
     margin: 0;
-}
-
-.site-footer1 ul:not(.socials) li+li {
+  }
+  
+  .site-footer1 ul:not(.socials) li + li {
     margin-top: 10px;
-}
-
-.site-footer1 a {
+  }
+  
+  .site-footer1 a {
     text-decoration: none;
     color: white;
-}
-
-.site-footer1 .socials1 {
+  }
+  
+  .site-footer1 .socials1 {
     display: grid;
     grid-template-columns: auto auto auto auto;
     justify-content: flex-start;
     grid-gap: 15px;
-}
-
-.site-footer1 .socials1 svg {
+  }
+  
+  .site-footer1 .socials1 svg {
     fill: var(--white);
-}
-
-@media (max-width: 650px) {
+  }
+  
+  @media (max-width: 650px) {
     .site-footer1 .widgets-wrapper1 {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
     }
-}
-
-
-
-.card{
+  }
+  
+  .card {
     width: 50%;
-}
-.card div{
+  }
+  .card div {
     width: fit-content;
-}
-
-.creator1 {
+  }
+  
+  .creator1 {
     position: fixed;
     right: 0;
     bottom: 50px;
@@ -359,9 +344,224 @@ a {
     padding: 5px;
     font-size: 0.75em;
     background: var(--white);
-}
-
-.creator1 a {
+  }
+  
+  .creator1 a {
     display: flex;
     margin-left: 4px;
-}
+  }
+  /* ---------------------------------------------------------cards */
+  :root {
+    --red: #e55604;
+    --darkred: #e55604;
+    --platinum: #e5e5e5;
+    --black: #2b2d42;
+    --white: #fff;
+    --thumb: #edf2f4;
+  }
+  
+  * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+  
+  body {
+    font: 16px / 24px "Rubik", sans-serif;
+    color: var(--black);
+    background: var(--platinum);
+  }
+  
+  .container {
+    max-width: 1400px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+  
+  h2 {
+    font-size: 32px;
+    margin-bottom: 1em;
+  }
+  
+  #cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin-top: 40px;
+    padding-bottom: 40px;
+    justify-content: space-between;
+  }
+  #favCard {
+    width: 300px;
+  }
+  
+  .cards {
+    display: flex;
+    padding: 25px 0px;
+    list-style: none;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+  }
+  
+  .card {
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 100%;
+    padding: 20px;
+    background: var(--white);
+    border-radius: 12px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 15%);
+    scroll-snap-align: start;
+    transition: all 0.2s;
+    border: 2px solid gray;
+    height: fit-content;
+  }
+  
+  .card#clicked {
+    height: fit-content;
+    min-width: 57%;
+    animation-name: clickedSize;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+  }
+  @keyframes clickedSize {
+    0% {
+      min-width: 252.4px;
+    }
+    100% {
+      min-width: 57%;
+    }
+  }
+  
+  .card .contents {
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: center;
+  }
+  @media (max-width: 1000px) {
+    .card#clicked .contents {
+      flex-direction: column;
+      align-items: center;
+    }
+    .card#clicked {
+      min-width: 93%;
+      animation-duration: 1s;
+      animation-name: clickedSizeSmall;
+    }
+  }
+  @keyframes clickedSizeSmall {
+    0% {
+      min-width: 252.4px;
+    }
+    100% {
+      min-width: 93%;
+    }
+  }
+  
+  .card#clicked .contents {
+    justify-content: flex-start;
+  }
+  
+  .card#clicked .content-container {
+    animation-name: clickedContent;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    /* height: fit-content; */
+  }
+  @keyframes clickedContent {
+    0% {
+      display: none;
+    }
+    20% {
+      display: none;
+    }
+    100% {
+      display: block;
+    }
+  }
+  
+  .card:not(:last-child) {
+    margin-right: 10px;
+  }
+  
+  .card:hover {
+    box-shadow: 0 5px 15px var(--red);
+    border: 2px solid var(--red);
+  }
+  .card#clicked:hover {
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 15%);
+    border: 2px solid gray;
+  }
+  
+  .card .content-container {
+    text-align: start;
+  }
+  
+  .card .card-title {
+    font-size: 20px;
+  }
+  
+  .card .card-content {
+    margin: 20px 0;
+    max-width: 85%;
+  }
+  
+  .card .card-link-wrapper {
+    margin-top: auto;
+  }
+  
+  .cards::-webkit-scrollbar {
+    height: 12px;
+  }
+  
+  .cards::-webkit-scrollbar-thumb,
+  .cards::-webkit-scrollbar-track {
+    border-radius: 92px;
+  }
+  
+  .cards::-webkit-scrollbar-thumb {
+    background: var(--darkred);
+  }
+  
+  .cards::-webkit-scrollbar-track {
+    background: var(--thumb);
+  }
+  
+  @media (min-width: 500px) {
+    .card {
+      flex-basis: calc(50% - 10px);
+    }
+  
+    .card:not(:last-child) {
+      margin-right: 20px;
+    }
+  }
+  
+  @media (min-width: 700px) {
+    .card {
+      flex-basis: calc(calc(100% / 3) - 20px);
+    }
+  
+    .card:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+  
+  @media (min-width: 1100px) {
+    .card {
+      flex-basis: calc(25% - 30px);
+    }
+  
+    .card:not(:last-child) {
+      margin-right: 40px;
+    }
+  }
+  
+  .card-img-top {
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    max-height: 200px;
+    max-width: 131px;
+    object-fit: cover;
+  }
